1.4.0i2p5:
    Checks & Agents:
    * 4069 FIX: cmciii.phase: Fixed broken check with some devices...
    * 4092 FIX: if.include: fixed wrong calculated number of interfaces which are up in case of interface groups
    * 4093 FIX: oracle_tablespaces: Werk 3907 broke the space calculation...

    WATO:
    * 4068 FIX: Fixed possible exception in case of wrong automation secrets between multiple sites...


1.4.0i2p4:
    Checks & Agents:
    * 3750 FIX: cmc_temp: Check now also works when using Nagios core
    * 3983 FIX: mssql_instance: Be more robust agains missing instance info in case of connection issues
    * 3963 FIX: check_mk_agent.linux: fixed strayed output of postfix status command
    * 3940 FIX: aix_hacmp_services: fixed broken check in case of agent section showing extra information before the "Status(...)" line...
    * 3941 FIX: zypper: fixed broken check for sections since agent OS SLES12...
    * 4088 FIX: ntp: fixed incomplete data handling
    * 4090 FIX: apc_rackpdu_power, apc_symmetra, apc_symmetra_input, apc_symmetra_output: some fixes...
    * 4091 FIX: oracle_tablespace: Werk 3907 broke the detection of UNDO- and TEMP-Tablespaces

    WATO:
    * 3982 FIX: Some MKPs created with WATO could not be uploaded to the Check_MK Exchange

    BI:
    * 3991 FIX: BI Aggregations: no longer show duplicate aggregations when an aggregation has mulitple groups

    Livestatus:
    * 3651 FIX: Fixed potential segfault with Nagios core when accessing log/commands table via Livestatus....

    HW/SW-Inventory:
    * 3916 FIX: History view: Only showing removed/added entries tables when there are entries
    * 4066 FIX: Fixed broken titles of nodes in inventory views
    * 4067 FIX: Fixed broken inventory history view in current master...
    * 3917 FIX: Fixed broken dicttable rendering
    * 3918 FIX: Inventory history: Fixed possible exception when renedering history tables...


1.4.0i2p3:
    Core & Setup: