@@ -1,0 +1,10 @@
+Title: Fixed multiple issues in BI availability when groups or names contain umlauts
+Level: 1
+Component: multisite
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i2p5
+Date: 1480083735
+
+
